--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/wme
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm_stats
       - POSTGRES_USER=wme_user
       - POSTGRES_PASSWORD=wme_user
 
@@ -18,13 +18,30 @@ services:
     ports:
       - "6545:5432"
     environment:
-      - POSTGRES_DB=wme
+      - POSTGRES_DB=ewm_stats
       - POSTGRES_USER=wme_user
       - POSTGRES_PASSWORD=wme_user
 
   ewm-service:
+    build: ewm-service
+    container_name: emw-service
     ports:
       - "8080:8080"
+    depends_on:
+      - ewm-db
+      - stats-server
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://emw-db:5432/ewm_main
+      - POSTGRES_USER=wme_user
+      - POSTGRES_PASSWORD=wme_user
+      - stat-server.url=http://stats-server:9090
 
   ewm-db:
     image: postgres:14-alpine
+    container_name: emw-db
+    ports:
+      - "6547:5432"
+    environment:
+      - POSTGRES_DB=ewm_main
+      - POSTGRES_USER=wme_user
+      - POSTGRES_PASSWORD=wme_user
