feat: разработка основного функционала

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 	<modules>
 		<module>stats-server</module>
 		<module>ewm-service</module>
+		<module>ewm-client</module>
 	</modules>
 
 	<parent>
