--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,70 @@
-version: '3.1'
+version: '3.8'
 services:
   stats-server:
-    build: stats-server
-    container_name: stats-server
+    build: ./stats
+    container_name: stats_server
+    restart: always
     ports:
       - "9090:9090"
     depends_on:
-      - stats-db
+      stats-db:
+        condition: service_healthy
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm_stats
+      - WAIT_HOSTS=stats-db:5432
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats
       - POSTGRES_USER=wme_user
       - POSTGRES_PASSWORD=wme_user
 
   stats-db:
-    image: postgres:14-alpine
-    container_name: stats-db
+    image: postgres:14.5-alpine
+    container_name: stats_db
+    restart: always
+    volumes:
+      - /var/lib/postgresql/data/
     ports:
-      - "6545:5432"
+      - "6590:5432"
     environment:
-      - POSTGRES_DB=ewm_stats
-      - POSTGRES_USER=wme_user
-      - POSTGRES_PASSWORD=wme_user
+      POSTGRES_DB: stats
+      POSTGRES_USER: wme_user
+      POSTGRES_PASSWORD: wme_user
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   ewm-service:
-    build: ewm-service
-    container_name: emw-service
+    build: ./main
+    container_name: main_server
+    restart: always
     ports:
       - "8080:8080"
     depends_on:
-      - ewm-db
-      - stats-server
+      ewm-db:
+        condition: service_healthy
+
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://emw-db:5432/ewm_main
+      - WAIT_HOSTS=ewm-db:5432
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm
       - POSTGRES_USER=wme_user
       - POSTGRES_PASSWORD=wme_user
-      - stat-server.url=http://stats-server:9090
+      - STATS_SERVER_URL=http://stats-server:9090
 
   ewm-db:
-    image: postgres:14-alpine
-    container_name: emw-db
+    image: postgres:14.5-alpine
+    container_name: ewm_db
+    restart: always
+    volumes:
+      - /var/lib/postgresql/data/
     ports:
-      - "6547:5432"
+      - "6580:5432"
+    # переменные окружения
     environment:
-      - POSTGRES_DB=ewm_main
-      - POSTGRES_USER=wme_user
-      - POSTGRES_PASSWORD=wme_user
+      POSTGRES_DB: ewm
+      POSTGRES_USER: wme_user
+      POSTGRES_PASSWORD: wme_user
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
