--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,70 +1,47 @@
-version: '3.8'
+version: '3.1'
 services:
   stats-server:
-    build: ./stats_server
-    container_name: stats_server
-    restart: always
+    build: stats-server
+    container_name: stats-server
     ports:
       - "9090:9090"
     depends_on:
-      stats-db:
-        condition: service_healthy
+      - stats-db
     environment:
-      - WAIT_HOSTS=stats-db:5432
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats
-      - POSTGRES_USER=wme_user
-      - POSTGRES_PASSWORD=wme_user
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/emw-stat
+      - POSTGRES_USER=emwuser
+      - POSTGRES_PASSWORD=emwuser
 
   stats-db:
-    image: postgres:14.5-alpine
-    container_name: stats_db
-    restart: always
-    volumes:
-      - /var/lib/postgresql/data/
+    image: postgres:14-alpine
+    container_name: stats-db
     ports:
-      - "6590:5432"
+      - "6545:5432"
     environment:
-      POSTGRES_DB: stats
-      POSTGRES_USER: wme_user
-      POSTGRES_PASSWORD: wme_user
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - POSTGRES_DB=emw-stat
+      - POSTGRES_USER=emwuser
+      - POSTGRES_PASSWORD=emwuser
 
   ewm-service:
-    build: ./ewm-service
-    container_name: ewm-service
-    restart: always
+    build: ewm-service
+    container_name: emw-service
     ports:
       - "8080:8080"
     depends_on:
-      ewm-db:
-        condition: service_healthy
-
+      - ewm-db
+      - stats-server
     environment:
-      - WAIT_HOSTS=ewm-db:5432
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm
-      - POSTGRES_USER=wme_user
-      - POSTGRES_PASSWORD=wme_user
-      - STATS_SERVER_URL=http://stats-server:9090
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://emw-db:5432/emw-main
+      - POSTGRES_USER=emwuser
+      - POSTGRES_PASSWORD=emwuser
+      - stat-server.url=http://stats-server:9090
 
   ewm-db:
-    image: postgres:14.5-alpine
-    container_name: ewm_db
-    restart: always
-    volumes:
-      - /var/lib/postgresql/data/
+    image: postgres:14-alpine
+    container_name: emw-db
     ports:
-      - "6580:5432"
-    # переменные окружения
+      - "6547:5432"
     environment:
-      POSTGRES_DB: ewm
-      POSTGRES_USER: wme_user
-      POSTGRES_PASSWORD: wme_user
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - POSTGRES_DB=emw-main
+      - POSTGRES_USER=emwuser
+      - POSTGRES_PASSWORD=emwuser
