--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/emw-main
-spring.datasource.username=emwuser
-spring.datasource.password=emwuser
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-main
+spring.datasource.username=ewmuser
+spring.datasource.password=ewmuser
 spring.sql.init.mode=always
 
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -17,12 +17,12 @@ logging.level.org.springframework.transaction.interceptor=ERROR
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=ERROR
 
 stat-server.url=http://localhost:9090
-service-app.name=emw-service
+service-app.name=ewm-service
 
 server.port=8080
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:emw-main
+spring.datasource.url=jdbc:h2:mem:ewm-main
 spring.datasource.username=test
 spring.datasource.password=test
