--- a/stats-server/src/main/resources/application.properties
+++ b/stats-server/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/emw-stat
-spring.datasource.username=emwuser
-spring.datasource.password=emwuser
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-stat
+spring.datasource.username=ewmuser
+spring.datasource.password=ewmuser
 spring.sql.init.mode=always
 
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -20,7 +20,7 @@ server.port=9090
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:emw-stat
+spring.datasource.url=jdbc:h2:mem:ewm-stat
 spring.datasource.username=test
 spring.datasource.password=test
 
