--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,74 @@
-version: '3.2'
+version: '3.8'
 services:
+  # Stats
   stats-server:
     build: stats-server
     container_name: stats-server
+    restart: always
     ports:
       - "9090:9090"
     depends_on:
-      - stats-db
+      stats-db:
+        condition: service_healthy
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-stat
-      - POSTGRES_USER=ewmuser
-      - POSTGRES_PASSWORD=ewmuser
+      - WAIT_HOSTS=stats-db:5432
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats
+      - POSTGRES_USER=sa
+      - POSTGRES_PASSWORD=password
 
+  # база данных для Stats
   stats-db:
-    image: postgres:14-alpine
-    container_name: stats-db
+    image: postgres:14.5-alpine
+    container_name: stats_db
+    restart: always
+    volumes:
+      - /var/lib/postgresql/data/
     ports:
-      - "6545:5432"
+      - "6590:5432"
+    # переменные окружения
     environment:
-      - POSTGRES_DB=ewm-stat
-      - POSTGRES_USER=ewmuser
-      - POSTGRES_PASSWORD=ewmuser
-
+      POSTGRES_DB: stats
+      POSTGRES_USER: sa
+      POSTGRES_PASSWORD: password
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+  # Main
   ewm-service:
     build: ewm-service
     container_name: ewm-service
+    restart: always
     ports:
       - "8080:8080"
     depends_on:
-      - ewm-db
-      - stats-server
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-main
-      - POSTGRES_USER=ewmuser
-      - POSTGRES_PASSWORD=ewmuser
-      - stat-server.url=http://stats-server:9090
+      ewm-db:
+        condition: service_healthy
 
-  ewm-db:
-    image: postgres:14-alpine
-    container_name: ewm-db
-    ports:
-      - "6547:5432"
     environment:
-      - POSTGRES_DB=ewm-main
-      - POSTGRES_USER=ewmuser
-      - POSTGRES_PASSWORD=ewmuser
+      - WAIT_HOSTS=ewm-db:5432
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm
+      - POSTGRES_USER=sa
+      - POSTGRES_PASSWORD=password
+      - STATS_SERVER_URL=http://stats-server:9090
+
+  # база для MAIn
+  ewm-db:
+    image: postgres:14.5-alpine
+    container_name: ewm_db
+    restart: always
+    volumes:
+      - /var/lib/postgresql/data/
+    ports:
+      - "6580:5432"
+    # переменные окружения
+    environment:
+      POSTGRES_DB: ewm
+      POSTGRES_USER: sa
+      POSTGRES_PASSWORD: password
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
