--- a/ewm-service/Dockerfile
+++ b/ewm-service/Dockerfile
@@ -1,3 +1,4 @@
 FROM amazoncorretto:11-alpine-jdk
-COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+EXPOSE 9091
+ADD ./target/service-ewm.jar service-ewm.jar
+ENTRYPOINT ["java","-jar","service-ewm.jar"]
