--- a/ewm-service/Dockerfile
+++ b/ewm-service/Dockerfile
@@ -1,4 +1,3 @@
 FROM amazoncorretto:11-alpine-jdk
-EXPOSE 9091
-ADD ./target/service-ewm.jar service-ewm.jar
-ENTRYPOINT ["java","-jar","service-ewm.jar"]
+COPY target/*.jar app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
