--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   stats-server:
     build: stats-server
     container_name: stats-server
+    restart: always
     ports:
       - "9090:9090"
     depends_on:
@@ -16,6 +17,7 @@ services:
   stats-db:
     image: postgres:14-alpine
     container_name: stats-db
+    restart: always
     ports:
       - "6545:5432"
     environment:
@@ -26,16 +28,16 @@ services:
   ewm-service:
     build: ewm-service
     container_name: ewm-service
+    restart: always
     ports:
       - "8080:8080"
     depends_on:
       - ewm-db
-      - stats-server
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-main
       - POSTGRES_USER=ewmuser
       - POSTGRES_PASSWORD=ewmuser
-      - stat-server.url=http://stats-server:9090
+      - STATS_SERVER_URL=http://stats-server:9090
 
   ewm-db:
     image: postgres:14-alpine
