--- a/ewm-service/pom.xml
+++ b/ewm-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ewm-service</artifactId>
+    <artifactId>ewm-main-server</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
