--- a/stats-server/Dockerfile
+++ b/stats-server/Dockerfile
@@ -1,3 +1,4 @@
 FROM amazoncorretto:11-alpine-jdk
-COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+EXPOSE 9090
+COPY target/ewm-stats-server*.jar ewm_stats_server.jar
+ENTRYPOINT ["java","-jar","/ewm_stats_server.jar"]
